# Chatbot_Interface

./: .gitignore  CCconv.py  CMakeLists.txt  Info.txt  TODO.txt
include/: ChatMangager.h  ChatWindow.h  LaTeXLabel.h
src/: ChatMangager.cpp  STInt.py  SimpleTests.py  main.cpp
src/ui/: ChatBubble.cpp  ChatWindow.cpp  LaTeXLabel.cpp
